# ogs-notify

./: Cargo.toml
src/: config.rs  main.rs  ogs.rs  state.rs  tray.rs  utils.rs
